remove npm name scoping

--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "@drdanryan/deburr-filename",
+  "name": "deburr-filename",
   "version": "1.0.0",
   "description": "Cleans up filenames by replacing some nasty characters",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": "github:drdanryan/deburr-filename.git",
   "author": "Dan Ryan",
   "license": "ISC",
   "dependencies": {
