--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Cleans up filenames by replacing some nasty characters",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --compilers js:babel-register"
   },
   "repository": {
     "type": "git",
@@ -14,5 +14,11 @@
   "license": "ISC",
   "dependencies": {
     "lodash": "*"
+  },
+  "devDependencies": {
+    "babel-preset-es2015": "^6.6.0",
+    "babel-register": "^6.7.2",
+    "chai": "^3.5.0",
+    "mocha": "^2.4.5"
   }
 }
