--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "1.4.0",
   "description": "Cleans up filenames by replacing some nasty characters",
   "main": "index.js",
-  "scripts": {
-    "test": "mocha --compilers js:babel-register"
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "https://www.github.com/drdanryan/deburr-filename"
@@ -13,12 +11,7 @@
   "author": "Dan Ryan",
   "license": "ISC",
   "dependencies": {
-    "lodash": "*"
+    "lodash": "^4.17.5"
   },
-  "devDependencies": {
-    "babel-preset-es2015": "^6.6.0",
-    "babel-register": "^6.7.2",
-    "chai": "^3.5.0",
-    "mocha": "^2.4.5"
-  }
+  "devDependencies": {}
 }
